TestSuite/PascalABCTests/errors/err0259.pas
uses System.Runtime.InteropServices;

type
  t1 = class
    
    [MarshalAs(UnmanagedType.ByValTStr)]
    s: string;
    
  end;

begin end.